# coer

./: .gitignore  CMakeLists.txt  coer.h
src/: c_platform.h  coer.c  coer.h
src/anim/: coer_anim.c  coer_anim.h  coer_draggable.h
src/geo/: coer_point.c  coer_point.h  coer_transform.c  coer_transform.h
src/util/: coer_sort.c  coer_sort.h
test/: CMakeLists.txt
test/src/: test_coer.c
work/: coer.sublime-project
work/coer-ios.xcodeproj/: project.pbxproj
work/coer-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
work/coer-ios.xcodeproj/project.xcworkspace/xcuserdata/vs.xcuserdatad/: UserInterfaceState.xcuserstate
work/coer-ios.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: xcschememanagement.plist
work/coer.xcodeproj/: project.pbxproj
work/coer/coer/: coer.h  coer.m
work/coer/coer/coer/coer.xcodeproj/: project.pbxproj
work/coer/coer/coer/coer.xcodeproj/project.xcworkspace/xcuserdata/vs.xcuserdatad/: UserInterfaceState.xcuserstate
work/coer/coer/coer/coer.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: xcschememanagement.plist
